--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,9 @@ services:
   web:
     image: tetyorkin/foodgram-project:latest
     restart: always
+    volumes:
+      - ./static:/code/static/
+      - ./media:/code/media/
     depends_on:
       - db
     env_file:
@@ -30,5 +33,5 @@ services:
       - 80:80
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_data:/code/static
-      - media_data:/code/media
+      - ./static:/code/static/
+      - /media:/code/media/
