--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.3.1
 astroid==2.5.2
 colorama==0.4.4
 Django==3.1.7
+django-environ==0.4.5
 django-multiselectfield==0.1.12
 flake8==3.9.1
 future==0.18.2
@@ -12,6 +13,7 @@ isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 Pillow==8.1.2
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pylint==2.7.4
