--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_ENGINE=django.db.backends.postgresql
-DB_NAME=foodgram
-POSTGRES_USER=foodgram_user
-POSTGRES_PASSWORD=foodgram_password
+DB_NAME=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
