--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,4 +34,4 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./static:/code/static/
-      - /media:/code/media/
+      - ./media:/code/media/
