--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,29 +3,29 @@ name: foodgram
 on: [push]
 
 jobs:
-#  tests:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Set up Python
-#      uses: actions/setup-python@v2
-#      with:
-#        python-version: 3.8
-#
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install flake8 pytest
-#        pip install -r requirements.txt
-#
-#    - name: Lint with flake8
-#      run: flake8 . --ignore=E501,W503 --exclude=tests
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt
+
+    - name: Lint with flake8
+      run: flake8 . --ignore=E501,W503 --exclude=tests
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-#    needs: tests
+    needs: tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
