--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - footgram/.env
+      - .env
 
   web:
     image: tetyorkin/foodgram-project:latest
@@ -25,7 +25,7 @@ services:
     depends_on:
       - db
     env_file:
-      - footgram/.env
+      - .env
 
   nginx:
     image: nginx:1.19
