--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-STATE=False
+DEBUG=False
 SECRET_KEY=x1)-fxl7und0689xz2mnqvt6=5^n&+@*h*r$*=$otfzk)_j5-p
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=postgres
